cargo-features = ["edition"]
[package]
edition = '2018'
authors = ["David Irvine <david.irvine@maidsafe.net>"]
name = "ga"
version = "0.1.0"

[[bench]]
harness = false
name = "bench"

[dependencies]
bit-vec = "0.5.0"
criterion = "0.2.5"
dialoguer = "0.1.0"
failure = "0.1.2"
failure_derive = "0.1.2"
proptest = "0.8.7"
quicli = "0.3.0"
rand = "0.5.5"
rayon = "1.0.2"
rulinalg = "0.4.2"
serde = "1.0.79"
serde_derive = "1.0.79"
